class LifeForm{
    
}