class OutPost: Base{

}