class SolarSystem{
    
}