class SpaceCraft{
    
}