class SpaceStation{
    
}