class TechUpgrades{
    
}