@startuml uml
!theme spacelab
user <|-- Skill
user <|-- TechUpgrades
user <|-- SpaceCraft
user <|-- OutPost
user <|-- SpaceStation
user <|-- SolarSystem
user <|-- LifeForms
user <|-- Base
SolarSystem <|-- Planet
SolarSystem <|-- Base
SolarSystem <|-- OutPost
SolarSystem <|-- SpaceStation
SolarSystem <|-- Resource
Planet <|-- Base
Planet <|-- OutPost
Planet <|-- Resource
Planet <|-- SpaceStation
SpaceCraft <|-- TechUpgrades
SpaceCraft <|-- Resource
LifeForms <|-- Planet
LifeForms <|-- SolarSystem
LifeForms <|-- Resource
LifeForms <|-- Skill
Base <-- OutPost
Base <|-- Resource
Base <|-- TechUpgrades
Base <|-- SpaceCraft
SpaceStation <|-- TechUpgrades
SpaceStation <|-- Resource
SpaceStation <|-- Planet
SpaceStation <|-- SpaceCraft

class user{
- _name: string
- _position: string
- _abilities: List<Skill>
- _techUpgrades: List<TechUpgrades>
- _money: int
- _spaceShips: List<SpaceCraft>
- _outPosts: List<OutPost>
- _spaceStations: List<SpaceStation>
- _currentSolarSystem: SolarSystem
- _foundLifeForms: List<LifeForms>
- _bases: List<Base>
+ SetName(): void
+ SetPosition(): void
+ PayForThings(): void
+ BuySpaceShip(): void
+ BuildBase(): void
+ UpgradeBase(): void
+ BuildOutPost(): void
+ LaunchSpaceStation(): void
+ SetLocal(): void
+ BuyTech(): void
+ BuyAbilities(): void
+ AddMoney(): void
+ GetName(): string
+ GetPosition(): string
+ GetAbilities(): List<Skill>
+ GetTech(): List<TechUpgrades>
+ GetMoney(): int
+ GetSpaceShips(): List<SpaceCraft>
+ GetOutPosts(): List<OutPost>
+ GetSpaceStation(): List<SpaceStaion>
+ GetLocal(): SolarSystem
+ GetFoundLife(): List<LifeForms>
+ GetBases(): List<Base>
}
class SolarSystem{
- _planets: List<Planet>
- _bases: List<Base>
- _outPosts: List<OutPost>
- _spaceStations: List<SpaceStation>
- _availableResources: List<Resource>
- _habitableZone: string
- _description: string
- _name: string
+ SetName(): void
+ SetDescription(): void
+ SetHabitableZone(): void
+ AddResources(Resource resource): void
+ AddSpaceStation(SpaceStation spacestation): void
+ AddPlanets(Planet planet): void
+ AddOutPost(OutPost outpost): void
+ AddBase(Base base): void
+ RemoveResource(Resource resource): void
+ RemovePlanet(Planet planet): void
+ RemoveOutPost(OutPost outpost): void
+ RemoveBase(Base base): void
+ RemoveSpaceStation(SpaceStation spacestation): void
+ GetName(): string
+ GetBases(): List<Base>
+ GetPosts(): List<OutPost>
+ GetResources(): List<Resource>
+ GetSpaceStations(): List<SpaceStation>
+ GetPlanets(): List<Planet>
+ GetDescription(): string
+ GetHz(): string
}
class Planet{
- _hasBase: bool
- _base: Base
- _hasOutPost: bool
- _outPosts: List<OutPost>
- _availableResources: List<Resource>
- _isHabitable: bool
- _isHabited: bool
- _hasSpaceStation: bool
- _spaceStation: SpaceStation
- _description: string
- _name: string
+ SetName(string string): void
+ GetName(): string
+ SetDescr(string string): void
+ GetDescr(): string
+ SetHabit(bool bo): void
+ GetHabit(): bool
+ SetHabited(bool bo): void
+ GetHabited(): bool
+ SetSpaceStation(SpaceStation space): void
+ GetSpaceStation(): SpaceStation
+ EditResources(List<Resource> lits, List<Resource> litsremove): void
+ GetResources(): List<Resource>
+ EditOutPosts(List<OutPost> listAdd, List<OutPost> listRemove): void
+ GetOutPosts(): List<OutPost>
}
class SpaceCraft{
- _maxSpeed: int
- _cost: int
- _maxFuel: int
- _currentFuel: int
- _oxygenLevel: float
- _numPassengers: int
- _availableSeats: int
- _totalSeats: int
- _currentLocation: string
- _lengthOfJourney: int
- _destination: string
- _range: int
- _techOnBoard: List<TechUpgrades>
- _resources; List<Resource>
- _description: string
- _name: string
+ SetMaxSpeed(int speed): void
+ GetMaxSpeed(): int
+ SetCost(int cost): void
+ GetCost(): int
+ SetMaxFuel(int maxFuel): void
+ GetMaxFuel(): int
+ SetCurrentFuel(int fuel): int
+ GetCurrentFuel(): int
+ SetOxygenLevel(int level): void
+ GetOxyLevel(): int
+ SetNumPassengers(int passengers): void
+ GetNumPassengers(): int
+ GetAvailableSets(): int
+ SetAvailableSets(int seats): void
+ SetCurrentLocale(string locale): void
+ GetCurrentLocale(): string
+ SetLengthJourney(int length): void
+ GetLengthJourney(): int
+ SetDestination(string destiny): void
+ GetDestination(): string
+ SetRange(): void
+ GetRange(): int
+ EditTech(List<TechUpgrades> listToAdd, List<TechUpgrades> listToSub): void
+ GetTech(): List<TechUpgrades>
+ EditResources(List<Resource> listToAdd, List<Resource> listToSub): void
+ GetResources(): List<Resource>
+ SetDescription(string desc): void
+ GetDescription(): void
+ SetName(string name): void
+ GetName(): string
}
class LifeForms{
- _advanced: bool
- _friendly: bool
- _potenitialFood:bool
- _neededResources: List<Resource>
- _skills: List<Skill>
- _spaceTravel: bool
- _currentPlanet: Planet
- _currentSolarSystem: SolarSystem
- _description: string
- _name: string
+ SetName(string name): void
+ GetName(): string
+ SetDesc(string desc): void
+ GetDesc(): string
+ EditSkills(List<Skill) listToAdd, List<Skill> listToPop: void
+ GetSkills(): List<Skill>
+ SetPlanet(Planet planet): void
+ GetPlanet(): Planet
+ SetNeededResources(List<Resource> listToAdd, List<Resource> listToPop): void
+ GetNeededResources(): List<Resource>
+ SetSolarSystem(SolarSystem solarSystem): void
+ GetSolarSystem(): SolarSystem
+ SetTravel(bool travel): void
+ GetTravel(): bool
+ SetPotentiallyEdible(bool edible): void
+ GetPotentiallyEdible(): bool
+ SetFriendly(bool friendly): void
+ GetFriendly(): bool
+ SetAdvanced(bool advanced): void
+ GetAdvanced(): bool
}
class TechUpgrades{
- _cost: string/int
- _description: string
- _name: string
- _grantsAbility: bool
+ SetCost(int cost): void
+ GetCost(): int
+ SetName(string name): void
+ GetName(): string
+ SetDesc(string desc): void
+ GetDesc(): string
+ SetGrant(bool grant): void
+ GetGrant(): bool
}
class OutPost{
- _habitable: bool
- _inhabtitedByHumans: bool
+ SetHabitable(bool habitable): void
+ GetHabitable(): bool
+ SetInhabited(bool inhabit): void
+ GetInhabited(): bool
}
class Base{
- _description: string
- _name: string
- _resourcesGained: List<Resource>
- _resourcesNeeded: List<Resource>
- _location: Planet
- _population: int
- _tech: List<TechUpgrades>
- _availableSpaceCraft: List<SpaceCraft>
+ SetDesc
+ GetDesc
+ SetName
+ GetName
+ EditResourceNeeds(List<Resource> list): void
+ GetResourceNeeds(): List<Resource>
+ EditResourceGains(List<Resource> list): void
+ GetResourceGains(): List<Resource>
+ SetPlanet(Planet planet): void
+ GetPlanet(): Planet
+ EditPop(int popChange): void
+ GetPop(): int
+ EditTech(List<TechUpgrades> list): void
+ GetTech(): List<TechUpgrades>
+ EditSpaceCraft(List<SpaceCraft> list): void
+ GetSpaceCraft(): List<SpaceCraft>
}
class SpaceStation{
- _description: string
- _name: string
- _tech: List<TechUpgrades>
- _currentLocation: Planet
- _purpose: string
- _fuel: int
- _oxygen: int
- _population: int
- _neededResources: List<Resource>
- _availableSpaceCraft: List<SpaceCraft>
+ SetDesc(string desc): void
+ GetDesc(): string
+ SetName(string name): void
+ GetName(): string
+ EditTech(List<TechUpgrades> list): void
+ GetTech(): List<TechUpgrades>
+ SetLocale(Planet locale): void
+ GetLocale(): Planet
+ SetPurpose(string purpose): void
+ GetPurpose(): string
+ SetFuel(int fuel): void
+ GetFuel(): int
+ SetOxygen(int oxygen): void
+ GetOxygen(): int
+ EditResources(List<Resource> list): void
+ GetResources(): List<Resource>
+ EditSpaceCraft(List<SpaceCraft> list): void
+ GetSpaceCraft(): List<SpaceCraft>
}
class Skill{
- _description: string
- _name: string
- _gainedAccess: bool
- _techGain: TechUpgrades
- _resourcesMadeAvailable: Resource
- _cost: int
+ SetDesc(string desc): void
+ GetDesc(): string
+ SetName(string name): void
+ GetName(): string
+ SetGainedAccess(bool access): void
+ GetGainedAccess(): bool
+ SetTech(TechUpgrades tech): void
+ GetTech(): TechUpgrades
+ SetResource(Resource resource): void
+ GetResource(): Resource
+ SetCost(int cost): void
+ GetCost(): int
}
class Resource{
- _description: string
- _name: string
- _uses: List<string>
- _tradeValue: int
+ SetDesc(string desc): void
+ GetDesc(): string
+ SetName(string name): void
+ GetName(): string
+ EditUses(List<string> list): void
+ GetUses(): List<string>
+ SetTradeValue(int value): void
+ GetTradeValue(): int
}
@enduml